[gd_scene load_steps=2 format=3 uid="uid://dmvdd4djnebyv"]

[ext_resource type="Script" uid="uid://464fqatb4qj5" path="res://src/ui/end_round_screen/end_round_screen.gd" id="1_6qyuo"]

[node name="EndRoundScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qyuo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Panel" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Finished"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="split" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split"]
layout_mode = 2
text = "Time"

[node name="stat_time" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split"]
unique_name_in_owner = true
layout_mode = 2
text = "64 seconds"
horizontal_alignment = 2

[node name="split2" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split2"]
layout_mode = 2
text = "# Loads"

[node name="stat_loads" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split2"]
unique_name_in_owner = true
layout_mode = 2
text = "44"
horizontal_alignment = 2

[node name="split6" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split6"]
layout_mode = 2
text = "Trains Placed"

[node name="stat_trains_placed" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split6"]
unique_name_in_owner = true
layout_mode = 2
text = "97"
horizontal_alignment = 2

[node name="split3" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split3"]
layout_mode = 2
text = "Tracks Placed"

[node name="stat_tracks_placed" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split3"]
unique_name_in_owner = true
layout_mode = 2
text = "97"
horizontal_alignment = 2

[node name="split4" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split4"]
layout_mode = 2
text = "Tiles Traversed"

[node name="stat_distance" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split4"]
unique_name_in_owner = true
layout_mode = 2
text = "14856"
horizontal_alignment = 2

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="split5" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split5"]
layout_mode = 2
text = "Score"

[node name="stat_score" type="Label" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/split5"]
unique_name_in_owner = true
layout_mode = 2
text = "9458678"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="play_again" type="Button" parent="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Another Round"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer/play_again" to="." method="_on_play_again_pressed"]
